[gd_scene load_steps=2 format=3 uid="uid://dvc73c3tiauv6"]

[ext_resource type="Script" path="res://plugins/ssh/src/ssh_config_window.gd" id="1_pb7h2"]

[node name="SSHConfigWindow" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50
script = ExtResource("1_pb7h2")

[node name="SSHClientListStage" type="Control" parent="."]
layout_mode = 2

[node name="Rows" type="VBoxContainer" parent="SSHClientListStage"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="SSHClients" type="VBoxContainer" parent="SSHClientListStage/Rows"]
layout_mode = 2
size_flags_vertical = 3

[node name="SSHClientsLabel" type="Label" parent="SSHClientListStage/Rows/SSHClients"]
layout_mode = 2
text = "SSH Clients"
horizontal_alignment = 1

[node name="SSHClientList" type="ItemList" parent="SSHClientListStage/Rows/SSHClients"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[connection signal="item_selected" from="SSHClientListStage/Rows/SSHClients/SSHClientList" to="." method="_on_ssh_client_list_item_selected"]
